--- a/package.json
+++ b/package.json
@@ -59,7 +59,11 @@
                 }
             ],
       "icon": "src/icons/diagTerm-256-bgt.ico",
-      "publisherName": "Techalchemy"
+      "publisherName": "Techalchemy",
+      "signingHashAlgorithms": [
+        "sha256"
+      ],
+      "sign": "scripts/sign.js"
         },
         "linux": {
             "target": [
