--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "scripts": {
         "start": "electron .",
         "rebuild": "electron-rebuild -f -w serialport",
-        "build": "node scripts/build.js",
-        "build:bugfix": "node scripts/build.js --bugfix",
-        "build:release": "node scripts/build.js --release",
-        "build:win": "electron-builder --win",
+    "build": "node scripts/build.js",
+    "build:bugfix": "node scripts/build.js --bugfix",
+    "build:release": "node scripts/build.js --release",
+    "generate-cert": "node scripts/generate-cert.js",
+    "build:win": "electron-builder --win",
         "build:linux": "electron-builder --linux",
         "build:mac": "electron-builder --mac",
         "build:all": "electron-builder --win --linux --mac",
